syntax = "proto3";
option java_multiple_files = true;
option java_package = "net.francoiscolombo.tools.automaton.grpc.agent";

package agent;

message MLoop {
  string index = 1;
  uint32 range = 2;
}

message MForEach {
  repeated string items = 1;
}

message MParameter {
  string pname = 1;
  string pvalue = 2;
}

message MStage {
  string action = 1;
  string display = 2;
  string condition = 3;
  MLoop loop = 4;
  MForEach foreach = 5;
  repeated MParameter parameters = 6;
}

message MVariable {
  string name = 1;
  string value = 2;
}

message MPlaybook {
  string name = 1;
  repeated MVariable variables = 2;
  repeated MStage stages = 3;
}

message MResponse {
  uint32 code = 1;
  string reason = 2;
  string message = 3;
}

message MPing {
  string ping = 1;
}

message MPong {
  string pong = 1;
}

message MSendFileRequest {
  string name = 1;
  string path = 2;
  bytes data = 3;
  int64 offset = 4;
}

message MSendFileResponse {
  int32 status = 1;
  string message = 2;
}

service AgentService {
  rpc play(MPlaybook) returns (MResponse);
  rpc ping(MPing) returns (MPong);
  rpc sendfile(stream MSendFileRequest) returns (MSendFileResponse) {}
}
